--- a/ADMIN/dashboard.html
+++ b/ADMIN/dashboard.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-BF4F2QldEqAymC3QsxhIJnqFodZcXV/96QMeR9+/HOv4w60eE4K6P6vCcGkG8d1c6ESsNIO41SPmXg5gsa7Ufw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/ADMIN/assets/css/dashboard.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
 
 	<script>
@@ -48,7 +48,7 @@
 </head>
 <body>
 	<header>
-		<img src="/home/logo.png" alt="Teachers Work Diary Logo" />
+		<img src="/assets/images/logo.png" alt="Teachers Work Diary Logo" />
 		<h1>Teachers Work Diary - ADMIN Dashboard</h1>
 		<nav>
 		  <ul>
@@ -62,11 +62,11 @@
 		<section id="dashboard-overview">
 			<div class="card">
 			  <i class="fas fa-chalkboard" id="new-applications-icon"></i>
-			  <li><a href="/ADMIN/new_appl/index.html">New Applications</a></li>
+			  <li><a href="/ADMIN/new-application.html">New Applications</a></li>
 			</div>
 			<div class="card">
 			  <i class="fas fa-calendar-check" id="work-diary-icon"></i>
-			  <li><a href="/ADMIN/show_diary/index.html">Work Diary</a></li>
+			  <li><a href="/ADMIN/show-diary.html">Work Diary</a></li>
 			</div>
 		  </section>
 		  
@@ -146,8 +146,8 @@
 				</div>
 				</div>
 			</div>
-			<script type="text/javaScript" src="/assets/js/main_admin.js"></script>
-			<script type="text/javaScript" src="script.js"></script>
+			<script type="text/javaScript" src="/ADMIN/assets/js/main_admin.js"></script>
+			<script type="text/javaScript" src="/ADMIN/assets/js/dashboard.js"></script>
   
 </body>
 </html>    
