--- a/ADMIN/show-diary.html
+++ b/ADMIN/show-diary.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/ADMIN/assets/css/show-diary.css">
 <style>
     .main-banner {
         margin-top: 10px;
@@ -80,6 +80,7 @@
             }
         }
     </script>
-    <script type="text/javaScript" src="/assets/js/main_admin.js"></script>
+    <script type="text/javaScript" src="/ADMIN/assets/js/main_admin.js"></script>
+    <script type="text/javaScript" src="/ADMIN/assets/js/show-diary.js"></script>
 </body>
 </html>
