--- a/user-profile.html
+++ b/user-profile.html
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="/edit-profile/index.html" class="btn btn-primary ml-auto">Edit Profile</a>
+                <a href="/profile-edit.html" class="btn btn-primary ml-auto">Edit Profile</a>
                 <button class="btn btn-secondary" onclick="logout()">Log-Out</button>
             </nav>
         </header>
