--- a/ADMIN/show-diary.html
+++ b/ADMIN/show-diary.html
@@ -53,10 +53,10 @@
             <div class="d-flex flex-row justify-content-center">
                 <div class="">
                     <b><label class="input-group">Enter User ID:</label></b>
-                    <input type="text" name="uid" value="">
+                    <input type="text" id="teacherId" name="uid" value="">
                 </div>
             </div>
-            <button type="submit" class="btn btn-secondary m-1 buttons" name="direct-show" id="">View Diary</button>
+            <button type="button" class="btn btn-secondary m-1 buttons" name="direct-show" onclick="openShowDiary()">View Diary</button>
         </form>  
     </main>
 
