--- a/user-profile.html
+++ b/user-profile.html
@@ -1,5 +1,6 @@
-<html>
 
+<!DOCTYPE html>
+<html>
 <head>
     <title>Profile</title>
     <!-- Google Fonts -->
@@ -10,40 +11,37 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css'>
     <link rel="stylesheet" type="text/CSS" href="/assets/css/user-profile.css">
 </head>
-
 <body>
-    <center>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Your Profile</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/work-diary/index.html">WORK-DIARY</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="created by">Created By</a>
-                        </li>
-                    </ul>
-                </div>
-                <a href="/profile-edit.html" class="btn btn-primary ml-auto">Edit Profile</a>
-                <button class="btn btn-secondary" onclick="logout()">Log-Out</button>
-            </nav>
-        </header>
-    </center>
-    <div class="student-profile py-4">
-        <div class="container">
-            <div class="row">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Your Profile</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/work-diary.html">WORK-DIARY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="created by">Created By</a>
+                    </li>
+                </ul>
+            </div>
+            <a href="/profile-edit.html" class="btn btn-primary ml-auto">Edit Profile</a>
+            <button class="btn btn-secondary" onclick="logout()">Log-Out</button>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="student-profile py-4">
+            <div class="row justify-content-center">
                 <div class="col-lg-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent text-center">
@@ -119,9 +117,7 @@
             });
         });
     </script>
-
     <script type="text/JavaScript" src="/assets/js/main.js"></script>
     <script type="text/JavaScript" src="/assets/js/user-profile.js"></script>
 </body>
-
 </html>
