--- a/ADMIN/dashboard.html
+++ b/ADMIN/dashboard.html
@@ -5,9 +5,9 @@
 	<title>Teachers Work Diary - ADMIN Dashboard</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 		integrity="sha512-BF4F2QldEqAymC3QsxhIJnqFodZcXV/96QMeR9+/HOv4w60eE4K6P6vCcGkG8d1c6ESsNIO41SPmXg5gsa7Ufw=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
+		crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 	<link rel="stylesheet" href="/ADMIN/assets/css/dashboard.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
 
