--- a/user-profile.html
+++ b/user-profile.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent text-center">
-                            <img class="profile_img" src="/assets/images/rd.png" alt="student dp">
+                            <img class="profile_img" src="/assets/images/loading.gif" id="profilePic" alt="student dp">
                             <h3 id="namePr">Dr. Rajib Das</h3>
                         </div>
                         <div class="card-body">
