--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        window.open("/login.html","_self")
+        window.open("login.html","_self")
     </script>
 </body>
 </html>
