--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@ margin: 0 auto;
       <h2>Purab Das</h2>
       <p>Department: Computer Science And Application</p>
       <p>College: Karimganj College</p>
-      <p>Address: Longai, Karimganj, Assam <b>(Web Developer)</b></p>
+      <p>Address: Longai, Karimganj, Assam <b></b></p>
     </div>
     <div class="profile-card">
       <img src="/assets/images/avtar/srijani.jpg" alt="Srijani" style="float:right;width:100px;max-width:100%;">
