--- a/add-diary.html
+++ b/add-diary.html
@@ -444,7 +444,7 @@
                 <div class="d-flex flex-row justify-content-around">
 
                     <button type="button" onclick="addDiary()" class="btn btn-primary">Submit</button>
-                    <a href="/work-diary/index.html" class="btn btn-danger btn-xs btn-outline">Go Back</a>
+                    <a href="work-diary.html" class="btn btn-danger btn-xs btn-outline">Go Back</a>
                 </div>
             </form>
 
