--- a/show-work-diary.html
+++ b/show-work-diary.html
@@ -20,6 +20,8 @@
             margin-top: 10px;
             padding: 10px;
             box-shadow: 0 0 7px black;
+            background: gold;
+
         }
 
         .dotted {
@@ -43,8 +45,8 @@
         <div class="navbar">
             <div class="logo"><a href="#">Show Diary</a></div>
             <ul class="links">
-                <li><a href="/profile/index.html">Go To Profile</a></li>
-                <li><a href="/created_by/index.html">Created By</a></li>
+                <li><a href="user-profile.html">Go To Profile</a></li>
+                <li><a href="about-us.html">About us</a></li>
             </ul>
             <a href="#" class="action_btn"><button onclick="window.print()">Print-Page</button></a>
             <div class="toggle_btn">
