--- a/ADMIN/show-diary.html
+++ b/ADMIN/show-diary.html
@@ -13,6 +13,7 @@
         margin-top: 10px;
         padding: 10px;
         box-shadow: 0 0 7px black;
+        background: gold;
     }
 
     .dotted {
