--- a/ADMIN/show-work-diary.html
+++ b/ADMIN/show-work-diary.html
@@ -20,6 +20,7 @@
             margin-top: 10px;
             padding: 10px;
             box-shadow: 0 0 7px black;
+            background: gold;
         }
 
         .dotted {
