--- a/ADMIN/teacher-profile-view.html
+++ b/ADMIN/teacher-profile-view.html
@@ -18,7 +18,7 @@
                 <div class="col-lg-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent text-center">
-                            <img class="profile_img" src="/assets/images/rd.png" alt="student dp">
+                            <img class="profile_img" src="/assets/images/avtar/Purab.jpg" alt="student dp">
                             <h3 id="namePr">Dr. Rajib Das</h3>
                         </div>
                         <div class="card-body">
@@ -68,12 +68,10 @@
                     <div style="height: 26px"></div>
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent border-0">
-                            <h3 class="mb-0"><i class="far fa-clone pr-1"></i>Other Information</h3>
+                            <h3 class="mb-0"><i class="far fa-clone pr-1"></i>Hey Admin !!!!!/h3>
                         </div>
                         <div class="card-body pt-0">
-                            <p id="other">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p id="other">Welcome to the users personal profile.....here u can view all the details of the user including his email and phone number</p>
                         </div>
                     </div>
                 </div>
