--- a/change-password.html
+++ b/change-password.html
@@ -14,21 +14,15 @@
 
 			<div class="card-text">
 				<form>
-					<div class="alert alert-danger alert-dismissible fade show" role="alert">
-						<strong> You should check in on some of those fields below.</strong>
-						<a class="close" data-dismiss="alert" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</a>
-					</div>
 					<div class="form-group">
-						<label for="exampleInputEmail1">Your new password</label>
-						<input type="password" class="form-control form-control-sm">
+						<label for="otp">Enter otp</label>
+						<input id="otp" type="text" name="otp" autocomplete="off"minlength="6" maxlength="6" class="form-control form-control-sm">
 					</div>
 					<div class="form-group">
 						<label for="exampleInputEmail1">Repeat password</label>
-						<input type="password" class="form-control form-control-sm">
+						<input id="password" autocomplete="off" type="password" class="form-control form-control-sm">
 					</div>
-					<button type="submit" class="btn btn-primary btn-block submit-btn">Confirm</button>
+					<button type="button" onclick="changePassword()" class="btn btn-primary btn-block submit-btn">Confirm</button>
 				</form>
 			</div>
 		</div>
