--- a/forgot-password.html
+++ b/forgot-password.html
@@ -29,7 +29,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" onclick="otpSend()" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                        <input name="recover-submit" onclick="otpSend()" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="button">
                       </div>
                       
                       <input type="hidden" class="hide" name="token" id="token" value=""> 
@@ -43,6 +43,6 @@
 	</div>
 </div>
 <script src="/assets/js/forgot-password.js"></script>
-<script type="text/javaScript" src="/assets/js/main.js"></script>
+<!-- <script type="text/javaScript" src="/assets/js/main.js"></script> -->
 </body>
 </html>
