--- a/profile-edit.html
+++ b/profile-edit.html
@@ -17,7 +17,7 @@
 				<div class="profile-tab-nav border-right">
 					<div class="p-4">
 						<div class="img-circle text-center mb-3">
-							<img src="rd.png" alt="Image" class="shadow">
+							<img src="/assets/images/avtar/Purab.jpg" alt="Image" class="shadow">
 						</div>
 						<h4 class="text-center"><label id="nameEdit">Dr. Rajib Das</label></h4>
 					</div>
@@ -25,10 +25,6 @@
 						<a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
 							<i class="fa fa-home text-center mr-1"></i> 
 							Account
-						</a>
-						<a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
-							<i class="fa fa-key text-center mr-1"></i> 
-							Password
 						</a>
 					</div>
 				</div>
@@ -57,6 +53,7 @@
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
+								  	<label>Select Department</label>
 									<select id="departmentEdit" name="department" required>
 										<option value="">Select Department</option>
 										<option value="Computer Science">Computer Science and Application</option>
@@ -81,6 +78,7 @@
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
+								  	<label>Select Designation</label>
 									<select id="designationEdit" name="designation" required>
 										<option value="">Select Designation</option>
 										<option value="Assistant Professor">Assistant Professor</option>
@@ -90,44 +88,10 @@
 									  </select>
 								</div>
 							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-								  	<label>Other-Information</label>
-									<textarea class="form-control" rows="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero enim error similique quia numquam ullam corporis officia odio repellendus aperiam consequatur laudantium porro voluptatibus, itaque laboriosam veritatis voluptatum distinctio!</textarea>
-								</div>
-							</div>
+							
 						</div>
 						<div>
 							<button class="btn btn-primary" onclick="update()">Update</button>
-							<button  onclick="window.open('/user-profile.html','_self')" class="btn btn-light">Cancel</button>
-						</div>
-					</div>
-					<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
-						<h3 class="mb-4">Password Settings</h3>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Old password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>New password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Confirm new password</label>
-								  	<input type="password" class="form-control">
-								</div>
-							</div>
-						</div>
-						<div>
-							<button class="btn btn-primary">Update</button>
 							<button  onclick="window.open('/user-profile.html','_self')" class="btn btn-light">Cancel</button>
 						</div>
 					</div>
