--- a/user-profile.html
+++ b/user-profile.html
@@ -30,9 +30,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact">Contact Us</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="created by">Created By</a>
-                    </li>
+                   
                 </ul>
             </div>
             <a href="/profile-edit.html" class="btn btn-primary ml-auto">Edit Profile</a>
@@ -45,7 +43,7 @@
                 <div class="col-lg-4">
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent text-center">
-                            <img class="profile_img" src="/assets/images/loading.gif" id="profilePic" alt="student dp">
+                            <img class="profile_img" src="/assets/images/avtar/Purab.jpg" alt="student dp">
                             <h3 id="namePr">Dr. Rajib Das</h3>
                         </div>
                         <div class="card-body">
@@ -95,12 +93,12 @@
                     <div style="height: 26px"></div>
                     <div class="card shadow-sm">
                         <div class="card-header bg-transparent border-0">
-                            <h3 class="mb-0"><i class="far fa-clone pr-1"></i>Other Information</h3>
+                            <h3 class="mb-0"><i class="far fa-clone pr-1"></i>Hey there....</h3>
                         </div>
                         <div class="card-body pt-0">
-                            <p id="other">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p id="other">Welcome to your profile section of Teachers work-diary website..
+                                here you can edit, view, add, and handle all your tasks
+                            </p>
                         </div>
                     </div>
                 </div>
